--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@ body {
   font-style: normal;
   font-weight: bold;
   font-size: 26px;
-  line-height: 1.20;
-  color: #2196f3;
+  line-height: 1.2;
+  color: blue;
 }
 .header-link:hover,
 .header-link:focus {
