--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 :root {
   --primary-text-color: black;
+  --secondary-title-color: #323232;
+  --accent-color: #4985ff;
 }
 body {
   font-family: "Roboto", sans-serif;
@@ -142,4 +144,7 @@ body {
 }
 .logotype {
   color: blue;
+}
+.button {
+  cursor: pointer;
 }
